# TFT-Screen-test

./: .cproject  .project  CMakeLists.txt  README.md
tft_test/: CMakeLists.txt
tft_test/main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  font.c  font.h  ldr_gl5537.c  ldr_gl5537.h  ldr_service.c  ldr_service.h  main.c  mqtt.c  mqtt.h  reminders_store.c  reminders_store.h  rgb_led.c  rgb_led.h  screen_lvgl.c  send_email.c  send_email.h  sntp.c  sntp.h  test.c  test_main.c  wifi.c  wifi.h  wifi_app.c  wifi_app.h
